Add pokedex and progress pokemon sheet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Custom JS -->
-    <script src="js/script.js"></script>
 </head>
-<body>
-    
+<body id="body">
+    <h1>Pokédex</h1>
+    <div class="content-pokedex"></div>
+
+     <!-- Custom JS -->
+     <script src="js/script.js"></script>
 </body>
 </html>
